<resources>
    <string name="app_name">Diary</string>
    <string name="add_new_data_button_name">Add new record</string>
    <string name="new_systolic_pressure">Systolic blood pressure:</string>
    <string name="new_diastolic_pressure">Diastolic blood pressure:</string>
    <string name="save_button">Save</string>
    <string name="go_to_alarm_button">Alarm and Notification</string>
    <string name="error_message">Error! All fields should be filled!</string>
    <string name="hint_systolic_pressure">Systolic pressure (max 300)</string>
    <string name="error_systolic_pressure">Enter the systolic pressure!</string>
    <string name="hint_diastolic_pressure">Diastolic pressure (max 300)</string>
    <string name="error_diastolic_pressure">Enter the diastolic pressure!</string>
    <string name="hint_pulse">Heart rate (max 300)</string>
    <string name="error_pulse">Enter the heart rate!</string>
    <string name="time_format">HH:MM</string>
    <string name="date_format">DD.MM.YYYY</string>
    <string name="new_pulse">Pulse:</string>
    <string name="go_to_alarm">Go to the alarm and notification page</string>
    <string name="save_button_on_toolbar">Save new record</string>
    <string name="date_format_string">dd.MM.yyyy</string>
    <string name="time_format_string">HH:mm</string>
    <string name="channel_name">DIARY_ALARM</string>
    <string name="channel_description">Notifications for a pressure measurement and for a taking pills</string>
    <string name="add_new_alarm">Add new alarm</string>
    <string name="measure_pressure">Measurement</string>
    <string name="take_pills">Taking pills</string>
    <string name="save_new_alarm">Save new alarm</string>
    <string name="error_message_for_add_alarm">Choose one or both reasons for the alarm!</string>
    <string name="text_of_notification">Time to measure a blood pressure and take pills!</string>
    <string name="error_message_for_missed_requestCode">RequestCode is missed for unknown reason</string>
</resources>
