<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAlarm">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_alarm_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        tools:targetApi="lollipop">

        <ImageButton
            android:id="@+id/save_alarm"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_gravity="end"
            android:layout_marginRight="@dimen/standard_margin"
            android:background="@android:color/transparent"
            android:contentDescription="@string/save_new_alarm"
            android:scaleType="centerCrop"
            android:text="@string/save_button"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/add_time_for_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="false"
        android:focusable="false"
        android:hint="@string/time_format"
        android:importantForAutofill="no"
        android:inputType="time"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_alarm_toolbar" />

    <Button
        android:id="@+id/alarm_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_constraints"
        android:text="@string/save_button"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/save_button" />

    <Switch
        android:id="@+id/measure_or_pills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_margin"
        android:layout_marginLeft="@dimen/standard_margin"
        android:layout_marginTop="@dimen/button_constraints"
        android:layout_marginEnd="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:text="Type of alarm"
        android:textAllCaps="false"
        android:textOff="@string/measure_pressure"
        android:textOn="@string/take_pills"
        android:textSize="@dimen/button_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_time_for_alarm" />

</androidx.constraintlayout.widget.ConstraintLayout>