<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/displayed_alarm_event"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    android:clickable="true">

    <TextView
        android:id="@+id/reason_measurement"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/measure_pressure"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="@+id/is_measurement_true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/is_measurement_true" />

    <TextView
        android:id="@+id/reason_pills"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/take_pills"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="@+id/is_pills_true"
        app:layout_constraintEnd_toEndOf="@+id/reason_measurement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/is_pills_true" />

    <CheckBox
        android:id="@+id/is_measurement_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toTopOf="@+id/is_pills_true"
        app:layout_constraintStart_toEndOf="@+id/reason_measurement"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/is_pills_true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        android:textSize="@dimen/font_size"
        app:layout_constraintStart_toEndOf="@+id/reason_pills"
        app:layout_constraintTop_toBottomOf="@+id/is_measurement_true" />

    <TextView
        android:id="@+id/time_of_alarm"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center|left"
        android:text="@string/time_format"
        android:textSize="@dimen/font_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/is_measurement_true"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/delete_alarm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/screen_background_light_transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_of_alarm"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <TextView
        android:id="@+id/border"
        android:layout_width="0dp"
        android:layout_height="@dimen/table_border"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/is_pills_true" />

</androidx.constraintlayout.widget.ConstraintLayout>